--- a/docker/ck-template-mlperf/Dockerfile.ubuntu-18.04
+++ b/docker/ck-template-mlperf/Dockerfile.ubuntu-18.04
@@ -1,18 +1,17 @@
 # Adaptive container with the CK interface
 # Concept: https://arxiv.org/abs/2011.01149
 
-FROM ubuntu:20.04
+# (CK automation 6ab9df569d0d1e6b)
+FROM ubuntu:18.04
 
-# Contact
 LABEL maintainer="Grigori Fursin <grigori@octoml.ai>"
 
-# Shell info
 SHELL ["/bin/bash", "-c"]
 ENTRYPOINT ["/bin/bash", "-c"]
 
-# Set noninteractive mode for apt (do not use ENV)
 ARG DEBIAN_FRONTEND=noninteractive
 
+# (CK automation ee47d84311b9373d)
 # Notes: https://runnable.com/blog/9-common-dockerfile-mistakes
 # Install system dependencies
 RUN apt update && \
@@ -25,33 +24,37 @@ RUN apt update && \
            python3 python3-pip python3-dev \
            sudo
 
-# Prepare a user with a user group with a random id
+# Prepare a user with a user group with a random id (CK automation 7b3ec2b6534f3394)
 RUN groupadd -g 1111 ckuser
 RUN useradd -u 2222 -g ckuser --create-home --shell /bin/bash ckuser
 RUN echo "ckuser:ckuser" | chpasswd
 RUN adduser ckuser sudo
 RUN echo "ckuser   ALL=(ALL)  NOPASSWD:ALL" >> /etc/sudoers
 
-# Set user
+# Set user (CK automation 8b8944a9b2c1f341)
 USER ckuser:ckuser
 WORKDIR /home/ckuser
 ENV PATH="/home/ckuser/.local/bin:${PATH}"
 RUN mkdir .ssh
 
-# Install CK
+# Install CK (CK automation f49f20744aba90e2)
+# We need to install new pip and setuptools otherwise there is a conflict 
+# with the local CK installation of Python packages ...
 RUN export DUMMY_CK=B
-RUN ${DUMMY_CK} pip3 install virtualenv
-RUN ${DUMMY_CK} pip3 install ck
+RUN ${DUMMY_CK} python3 -m pip install --ignore-installed pip setuptools wheel --user
+RUN ${DUMMY_CK} python3 -m pip install virtualenv --user
+RUN ${DUMMY_CK} python3 -m pip install ck --user
 
-# Clone ck-ml repo
+# Clone CK repo(s) or pull them from Zenodo (CK automation f49f20744aba90e2)
 RUN ck pull repo:ck-ml
 
-# Install packages to CK env entries
+# Configure CK (CK automation ddea4415c4133ef9)
 RUN ck setup kernel --var.install_to_env=yes
 
 RUN ck detect platform.os --platform_init_uoa=generic-linux-dummy
 RUN ck detect soft:compiler.python --full_path=/usr/bin/python3
 
+# Install CK packages (CK automation 271a9004c9799191)
 RUN ck install package --quiet --tags=mlperf,inference,src,dev
 
 RUN ck detect soft:compiler.gcc --full_path=`which gcc`
@@ -62,5 +65,5 @@ RUN ck install package --tags=lib,python-package,absl
 RUN ck install package --tags=lib,python-package,numpy
 
 
-RUN ck install package --tags=lib,python-package,mlperf,loadgen
+#RUN ck install package --tags=lib,python-package,mlperf,loadgen
 #RUN ck install package --tags=lib,mlperf,loadgen,static
