--- a/docker/ck-mlperf-inference-dev-image-classification-onnx-tvm/Dockerfile.ubuntu-20.04
+++ b/docker/ck-mlperf-inference-dev-image-classification-onnx-tvm/Dockerfile.ubuntu-20.04
@@ -8,13 +8,15 @@ LABEL maintainer="Grigori Fursin <grigori@octoml.ai>"
 
 # Shell info
 SHELL ["/bin/bash", "-c"]
-ENTRYPOINT ["/bin/bash", "-c"]
+#ENTRYPOINT ["/bin/bash", "-c"]
 
 # Set noninteractive mode for apt (do not use ENV)
 ARG DEBIAN_FRONTEND=noninteractive
 
 # Notes: https://runnable.com/blog/9-common-dockerfile-mistakes
 # Install system dependencies
+# * libtinfo-dev is needed to build TVM
+# * python-is-python3 for MLPerf inference via run_local.sh
 RUN apt update && \
     apt install -y --no-install-recommends \
            apt-utils \
@@ -23,6 +25,7 @@ RUN apt update && \
            gcc g++ autoconf autogen libtool make libc6-dev build-essential \
            libssl-dev libbz2-dev libffi-dev \
            python3 python3-pip python3-dev \
+           libtinfo-dev \
            python-is-python3 \
            sudo
 
@@ -40,11 +43,10 @@ ENV PATH="/home/ckuser/.local/bin:${PATH}"
 RUN mkdir .ssh
 
 # Install CK
-RUN export DUMMY_CK=A
-RUN ${DUMMY_CK} pip3 install virtualenv
+RUN export DUMMY_CK=C
 RUN ${DUMMY_CK} pip3 install ck
 
-# Clone CK repo
+# Clone private CK repo
 RUN ck pull repo:octoml@mlops
 
 # Install packages to CK env entries
@@ -55,34 +57,44 @@ RUN ck detect soft:compiler.python --full_path=/usr/bin/python3
 
 RUN ck detect soft:compiler.gcc --full_path=`which gcc`
 
-RUN ck install package --tags=tool,cmake,prebuilt --quiet
+RUN python3 -m pip install protobuf
+
+RUN ck install package --tags=mlperf,inference,src,octoml.dev
 
 RUN ck install package --tags=lib,python-package,absl
-RUN ck install package --tags=lib,python-package,numpy
-RUN ck install package --tags=lib,python-package,scipy
-RUN ck install package --tags=lib,python-package,matplotlib
-RUN ck install package --tags=lib,python-package,cython
-RUN ck install package --tags=lib,python-package,pillow
-RUN ck install package --tags=lib,python-package,opencv-python-headless
 
-# Need to change to OctoML branch soon
-RUN ck install package --tags=mlperf,inference,src,octoml.dev
+RUN ck install package --tags=lib,python-package,numpy
+
 RUN ck install package --tags=lib,python-package,mlperf,loadgen
+
+RUN ck install package --tags=lib,python-package,matplotlib
+
+RUN ck install package --tags=lib,python-package,cython
+
+RUN ck install package --tags=lib,python-package,opencv-python-headless
 
 RUN ck install package --tags=tool,coco,api
 
-RUN ck install package --tags=dataset,coco,val,2017,full
+RUN ck install package --tags=imagenet,2012,val,min,non-resized
+RUN ck install package --tags=imagenet,2012,aux,from.berkeley
 
 RUN ck install package --tags=lib,python-package,onnxruntime-cpu,1.7.0
 RUN ck install package --tags=lib,python-package,onnx,1.9.0
 
+RUN ck install package --tags=model,image-classification,mlperf,onnx,resnet50,v1.5-opset-11
+
+RUN ck install package --tags=lib,python-package,scipy
+
+RUN ck install package --tags=tool,cmake,prebuilt,v3.18.2
+
 RUN ck install package --tags=compiler,llvm,prebuilt,v12.0.0
 
-RUn ck install package --tags=compiler,tvm,dev
+RUN ck install package --tags=compiler,tvm,dev
 
-RUN ck install package --tags=model,object-detection,mlperf,onnx,ssd-mobilenet,side.300,non-quantized,opset-8
-RUN ck install package --tags=model,object-detection,mlperf,onnx,ssd-mobilenet,side.300,non-quantized,opset-11
-RUN ck install package --tags=model,object-detection,mlperf,onnx,ssd-resnet34,side.1200,non-quantized,opset-8
+# Install MLPerf task requirements
+RUN ck run program:mlperf-inference-bench-image-classification-tvm-cpu --cmd_key=_requirements
 
-# Start bash
-CMD bash
+# Run TVM-based MLPerf inference benchmark (Offline;Accuracy)
+CMD ck run program:mlperf-inference-bench-image-classification-tvm-cpu \
+          --cmd_key=Accuracy-Offline \
+          --env.EXTRA_OPS="--thread 1 --max-batchsize 1"
