--- a/docker/ck-mlperf-inference-dev-image-classification-onnx-tvm/Dockerfile.ubuntu-20.04
+++ b/docker/ck-mlperf-inference-dev-image-classification-onnx-tvm/Dockerfile.ubuntu-20.04
@@ -92,7 +92,7 @@ RUN ck install package --tags=compiler,llvm,prebuilt,v12.0.0
 RUN ck install package --tags=compiler,tvm,dev
 
 # Install MLPerf task requirements
-RUN ck run program:mlperf-inference-bench-image-classification-tvm-cpu --cmd_key=_requirements
+RUN ck run program:mlperf-inference-bench-image-classification-tvm-cpu --cmd_key=install-python-requirements
 
 # Run TVM-based MLPerf inference benchmark (Offline;Accuracy)
 CMD ck run program:mlperf-inference-bench-image-classification-tvm-cpu \
