--- a/docker/ck-mlperf-inference-dev-object-detection-onnx-tvm/Dockerfile.ubuntu-20.04
+++ b/docker/ck-mlperf-inference-dev-object-detection-onnx-tvm/Dockerfile.ubuntu-20.04
@@ -84,5 +84,10 @@ RUN ck install package --tags=model,object-detection,mlperf,onnx,ssd-mobilenet,s
 RUN ck install package --tags=model,object-detection,mlperf,onnx,ssd-mobilenet,side.300,non-quantized,opset-11
 RUN ck install package --tags=model,object-detection,mlperf,onnx,ssd-resnet34,side.1200,non-quantized,opset-8
 
-# Start bash
-CMD bash
+# Install MLPerf task requirements
+RUN ck run program:mlperf-inference-bench-object-detection-tvm-cpu --cmd_key=install-python-requirements
+
+# Run TVM-based MLPerf inference benchmark (Offline;Accuracy)
+CMD ck run program:mlperf-inference-bench-object-detection-tvm-cpu \
+          --cmd_key=Accuracy-Offline \
+          --env.EXTRA_OPS="--count 100 --thread 1 --max-batchsize 1"
