--- a/docker/ck-mlperf-inference-dev-image-classification-onnx-tvm/Dockerfile.ubuntu-20.04
+++ b/docker/ck-mlperf-inference-dev-image-classification-onnx-tvm/Dockerfile.ubuntu-20.04
@@ -22,8 +22,9 @@ RUN apt update && \
            apt-utils \
            git wget zip bzip2 libz-dev libbz2-dev cmake curl unzip \
            openssh-client vim mc tree \
-           gcc g++ autoconf autogen libtool make libc6-dev build-essential \
-           libssl-dev libbz2-dev libffi-dev \
+           gcc g++ autoconf autogen libtool make libc6-dev build-essential patch \
+           gfortran libblas-dev liblapack-dev \
+           libsndfile1-dev libssl-dev libbz2-dev libxml2-dev libtinfo-dev libffi-dev \
            python3 python3-pip python3-dev \
            libtinfo-dev \
            python-is-python3 \
