--- a/docker/ck-mlperf-inference-dev-object-detection-onnx-tvm/Dockerfile.ubuntu-18.04
+++ b/docker/ck-mlperf-inference-dev-object-detection-onnx-tvm/Dockerfile.ubuntu-18.04
@@ -1,7 +1,7 @@
 # Adaptive container with the CK interface
 # Concept: https://arxiv.org/abs/2011.01149
 
-FROM ubuntu:20.04
+FROM ubuntu:18.04
 
 # Contact
 LABEL maintainer="Grigori Fursin <grigori@octoml.ai>"
@@ -15,6 +15,8 @@ ARG DEBIAN_FRONTEND=noninteractive
 
 # Notes: https://runnable.com/blog/9-common-dockerfile-mistakes
 # Install system dependencies
+# * libtinfo-dev is needed to build TVM
+# * python-is-python3 for MLPerf inference via run_local.sh
 RUN apt update && \
     apt install -y --no-install-recommends \
            apt-utils \
@@ -25,9 +27,9 @@ RUN apt update && \
            libsndfile1-dev libssl-dev libbz2-dev libxml2-dev libtinfo-dev libffi-dev \
            python3 python3-pip python3-dev \
            libtinfo-dev \
-           python-is-python3 \
-           libncurses-dev \
            sudo
+
+ENV CK_PYTHON=python3
 
 # Prepare a user with a user group with a random id
 RUN groupadd -g 1111 ckuser
@@ -42,10 +44,11 @@ WORKDIR /home/ckuser
 ENV PATH="/home/ckuser/.local/bin:${PATH}"
 RUN mkdir .ssh
 
-# Install CK
-RUN export DUMMY_CK=A
-RUN ${DUMMY_CK} pip3 install virtualenv
-RUN ${DUMMY_CK} pip3 install ck
+# Install CK (need to update PIP and setuptools on old Ubuntu - otherwise conflicts)
+RUN export DUMMY_CK=C
+RUN ${DUMMY_CK} ${CK_PYTHON} -m pip install --ignore-installed pip setuptools wheel --user
+RUN ${DUMMY_CK} ${CK_PYTHON} -m pip install pyyaml virtualenv --user
+RUN ${DUMMY_CK} ${CK_PYTHON} -m pip install ck --user
 
 # Clone CK repo
 RUN ck pull repo:octoml@mlops
@@ -54,7 +57,7 @@ RUN ck pull repo:octoml@mlops
 RUN ck setup kernel --var.install_to_env=yes
 
 RUN ck detect platform.os --platform_init_uoa=generic-linux-dummy
-RUN ck detect soft:compiler.python --full_path=/usr/bin/python3
+RUN ck detect soft:compiler.python --full_path=/usr/bin/$CK_PYTHON
 
 RUN ck detect soft:compiler.gcc --full_path=`which gcc`
 
