--- a/docker/ck-mlperf-local-dashboard-demo2/Dockerfile.ubuntu-20.04
+++ b/docker/ck-mlperf-local-dashboard-demo2/Dockerfile.ubuntu-20.04
@@ -47,7 +47,7 @@ RUN ${DUMMY_CK} pip3 install ck
 RUN python3 -m pip install pandas --user
 
 # Clone CK repo
-RUN ck pull repo:ai
+RUN ck pull repo:ck-mlops
 
 # Install packages to CK env entries
 RUN ck setup kernel --var.install_to_env=yes
